2006-01-08  Christian Kellner  <gicmo@gnome.org>

	* configure.in:
	Clean up some SSL stuff and report SSL support.
	Add --http-debug configure options to enable http module
	debugging support (activate per default it for cvs versions).
	
	* imported/neon/Makefile.am:
	* imported/neon/ne_auth.c:
	* imported/neon/ne_gnomevfs.c:
	* imported/neon/ne_utils.c:
	Make SSL work again.
	
	* modules/http-neon-method.c:
	Report NOT_SUPPORTED if a ssl uri was requested but no ssl
	support was compiled in.

	(#326030)

2006-01-07  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* configure.in: Add "zh_HK" to ALL_LINGUAS.

2006-01-06  Christian Neumair  <chris@gnome-de.org>

	* MAINTAINERS: Add.

2006-01-05  John McCutchan  <ttb@tentacle.dhs.org>

	* modules/inotify-path.c: (ip_event_dispatch):
	When delivering a paired MOVED_TO event do the right thing and check the
	MOVED_TO filename instead of the MOVED_FROM. (#324999)

2006-01-03  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: remove comment which refers to
	code which was removed when we started using
	AM_GCONF_SOURCE_2

2006-01-02  John McCutchan  <ttb@tentacle.dhs.org>

	* modules/inotify-path.c: (ip_unmap_wd_dir), (ip_unmap_wd):
	dir_list can be empty. Fixes #325001.

2005-12-28  Christian Kellner  <gicmo@gnome.org>

	* modules/http-neon-method.c: (do_seek):
	Only abort the transfer if position acutally changed.
	Path from Jan Kratochvil (#324984). 

2005-12-19  Murray Cumming  <murrayc@murrayc.com>

	* libgnomevfs/gnome-vfs-uri.c:
	* libgnomevfs/gnome-vfs-utils.c: Expand some documentation 
	to make it clearer what types of strings are expected/provided 
	by some functions.

2005-12-19  John McCutchan  <ttb@tentacle.dhs.org>

	* modules/file-method.c: (inotify_monitor_add),
	(inotify_monitor_cancel):
	* modules/inotify-helper.c: (ih_sub_cancel):
	Stop cancelling the subscription before it was really cancelled.
	This avoids freeing the subscription while it's still active and
	stops crashes.
	